# hermes

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _01_0ct_0cn-example.html  _0ct-example.html  annotated.html  annotated_dup.js  arg__parser_8cpp.html  arg__parser_8h.html  arg__parser_8h_source.html  bbox_8h_source.html  bitmask__operators_8h.html  bitmask__operators_8h.js  bitmask__operators_8h_source.html  c-like-example.html  classes.html  classhermes_1_1ArgParser-members.html  classhermes_1_1ArgParser.html  classhermes_1_1ArgParser.js  classhermes_1_1BBox1-members.html  classhermes_1_1BBox1.html  classhermes_1_1BBox1.js  classhermes_1_1BBox2-members.html  classhermes_1_1BBox2.html  classhermes_1_1BBox2.js  classhermes_1_1BBox3-members.html  classhermes_1_1BBox3.html  classhermes_1_1BBox3.js  classhermes_1_1Circle-members.html  classhermes_1_1Circle.html  classhermes_1_1Circle.js  classhermes_1_1ConsoleColors-members.html  classhermes_1_1ConsoleColors.html  classhermes_1_1ConstStrView-members.html  classhermes_1_1ConstStrView.html  classhermes_1_1ConstStrView.js  classhermes_1_1CurveInterface-members.html  classhermes_1_1CurveInterface.html  (+447 more)
.github/workflows/: docs.yml  gcc_compiler.yml
CMake/: ConfigCompilerFlags.cmake  GenerateDocs.cmake  SetupHermesTarget.cmake
docs/: 0_getting_started.md  1_build_and_install.md  2_linking.md  3_common.md  4_logging.md  5_debugging.md  6_profiling.md  7_numeric.md  8_geometry.md  9_cuda.md  page.dox  profiling.md
docs/doxygen-custom/: doxyfile.in  footer.html  header.html
ext/: catch2.cmake  ponos.cmake
ext/catch2/: catch.hpp
hermes/: CMakeLists.txt  hermes.h
hermes/algorithms/: cuda_marching_cubes.cu
hermes/colors/: argb_colors.h  cuda_color.h
hermes/common/: arg_parser.cpp  arg_parser.h  bitmask_operators.h  cuda.h  cuda_parallel.h  cuda_random.h  cuda_utils.cpp  cuda_utils.h  debug.h  defs.h  file_system.cpp  file_system.h  index.h  optional.h  parsers.cpp  parsers.h  profiler.cpp  profiler.h  reduce.h  result.h  size.h  str.cpp  str.h  str_view.cpp  str_view.h  timer.h
hermes/data_structures/: cartesian_hash.cpp  cartesian_hash.h  multi_hash_map.h  n_mesh.cpp  n_mesh.h  p_mesh.h  raw_mesh.cpp  raw_mesh.h
hermes/geometry/: bbox.h  cuda_numeric.h  frustum.h  line.h  matrix.h  normal.h  numeric.h  parametric_surface.h  plane.h  point.h  quaternion.cpp  quaternion.h  queries.cpp  queries.h  ray.cpp  ray.h  segment.h  shape.h  sphere.h  surface.h  transform.cpp  transform.h  utils.cpp  utils.h  vector.h
hermes/logging/: argb_colors.h  console_colors.cpp  console_colors.h  logging.cpp  logging.h  memory_dump.h
hermes/numeric/: cuda_field.h  cuda_interpolation.cu  cuda_interpolation.h  cuda_staggered_grid.h  e_float.cpp  e_float.h  fd_matrix.h  grid.h  interpolation.h  interval.h  math_element.h  numeric.h  vector_grid.h
hermes/parallel/: reduce.h
hermes/random/: noise.cpp  noise.h  rng.h
hermes/storage/: array.h  array_of_structures.cpp  array_of_structures.h  array_of_structures_view.h  array_slice.h  array_view.h  cuda_storage_utils.h  memory.cpp  memory.h  memory_block.cpp  memory_block.h  stack_allocator.cpp  stack_allocator.h  struct_descriptor.cpp  struct_descriptor.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+129 more)
tests/: CMakeLists.txt  common_tests.cpp  common_tests.cu  data_structures_tests.cpp  geometry_tests.cpp  geometry_tests.cu  log_tests.cpp  memory_tests.cu  numeric_tests.cpp  numeric_tests.cu  random_tests.cpp  storage_tests.cpp  storage_tests.cu
